# SU3SimSuit

./: .gitignore  compile.sh  input.xml  makefile
doc/: installing_intel_mkl.txt  intalling_FoX.txt
scripts/: dumpDoublePrecisionBinary.sh  run_avrg_plaquette.sh  run_gen_lat_conf.sh  run_green_function.sh  run_tensor_correlator.sh  run_tmunu.sh  run_wilson_loop_correlator.sh
src/: CMakeLists.txt  Project_Green_Functions_Components.py  TemperatureRatio.nb  avrg_plaquette.f90  avrg_plaquette_analyser.py  fermion_tmunu.f90  gen_lat_conf.f90  green_function_tmunu.f90  propagator_fft.py  tensor_correlator.f90  tmunu.f90  wilson_loop_correlation.f90
src/modules/: IO.f90  cuda_fermion_prop.f90  fermion_prop.f90  heat_bath.f90  lattice.f90  math.f90  objects.f90  statistic.f90  types_params.f90  xml_parser.f90
vs_project_files/: SU3SimSuitSolution.sln
vs_project_files/avrg_plaquette/: avrg_plaquette.vfproj
vs_project_files/gen_lat_conf/: gen_lat_conf.vfproj
